# engram-notion-mcp

./: .editorconfig  .env.example  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  sample_claude_desktop_config.json  server.py
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: prepare-release.yml  publish-dual.yml
conductor/: product-guidelines.md  product.md  tech-stack-node.md  tech-stack.md  tracks.md
conductor/archive/robust_content_20251230/: plan.md
conductor/tracks/automated_release_notes_20251231/: metadata.json  plan.md  spec.md
conductor/tracks/feature_parity_20251230/: metadata.json  plan.md  spec.md
conductor/tracks/robust_content_20251230/: metadata.json  plan.md  spec.md
docs/: BUG-feature-missing.md  next-steps.md  verification-phase-1.md  verification-robust-content-node.md
legacy_package/: README.md  pyproject.toml
legacy_package/src/better_notion_mcp/: __init__.py
node/: README.md  package.json  tsconfig.json
node/scripts/: release.ts
node/src/: index.js  index.test.ts  index.ts  large_content.test.ts
python/: README.md  pyproject.toml
python/src/engram_notion_mcp/: __main__.py  server.py
scripts/: sync-version.js
src/better_notion_mcp/: __init__.py  server.py
