[project]
name = "better-notion-mcp"
version = "0.1.3"
description = "DEPRECATED: Please install 'engram-mcp' instead."
dependencies = [
    "engram-mcp"
]
requires-python = ">=3.10"
authors = [
  { name = "Shubham Omar", email = "shubhamomar53@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
urls = { Repository = "https://github.com/shubhamomar/engram-mcp" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
