[project]
name = "engram-notion-mcp"
version = "1.0.0"
description = "The permanent and semantic memory layer for AI agents"
dependencies = [
    "mcp",
    "fastmcp",
    "notion-client",
    "python-dotenv"
]
requires-python = ">=3.10"
authors = [
  { name = "Shubham Omar", email = "shubhamomar53@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
urls = { Repository = "https://github.com/shubhamomar/engram-notion-mcp" }
scripts = { "engram-notion-mcp" = "engram_mcp.server:mcp.run" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
